# voxa

./: LICENSE  LICENSING.md  README.md  expected_structure.txt  pyproject.toml  voxa_specification.md
.github/workflows/: release.yml
schema/: voxa.corpus.schema.json  voxa.dataset.schema.json  voxa.sample.schema.json
src/voxa_metrics/: __init__.py  metrics.py
tests/: test_metrics.py  test_schema_contract.py
